plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/jvmJs/jvmJs.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM, JS'")!>JvmJs<!> : Number
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>Common<!> = JvmJs